--- a/bundle.yaml
+++ b/bundle.yaml
@@ -1,6 +1,8 @@
 apiVersion: "1"
-version: "1"
+version: "2"
 id: "cloudbees-ci-dpk-dev-controller"
 description: "CloudBees CI configuration bundle for the cloudbees-ci-dpk dev-controller Controller"
 availabilityPattern: "cloudbees-ci-casc-workshop/cloudbees-ci-dpk/dev-controller"
 parent: "base"
+rbac:
+  - "rbac.yaml"
